# nicegui_table_with_details

./: README.md  pyproject.toml
src/nicegui_table_with_details/: main.py  table_with_details.py
